--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <!-- Add Your Title -->
-  <title> Your Title Here </title>
+  <title> Vineetha </title>
 
   <!-- All Meta Tags -->
   <meta charset="utf-8">
@@ -50,9 +50,9 @@
 
       <!-- Text "hello world" -->
       <header id="header">
-        <div id="helloworld">
+        <div id="Quote">
           <h1>
-            Hello, World !
+            DREAM, EXPLORE, DISCOVER!
           </h1>
         </div>
       </header>
@@ -111,18 +111,19 @@
             <section class="clearfix">
               <div class="g2">
                 <div class="photo">
-                  <img src="./images/my.jpg" alt="Your alt text">
+                  <img src="./images/my_pic.jpg" alt="Your alt text">
                 </div>
                 <div class="info">
                   <h2>
                     <p></p>
-                    Your Name
+                    Vineetha Kondameedi
                   </h2>
                   <h4>
-                    Your work tag
+                    Research Associate, IISc
                   </h4>
                   <p>
-                    Type your description here.
+                    I am a Research Associate in Machine Learning Lab with Robert Bosch Centre for Cyber Physical Systems (RBCCPS) in Indian Institute of Science (IISc), Bangalore. 
+                    I am advised by Prof. Chiranjib Bhattacharyya, Department of Computer Science and Automation (CSA), IISc Bangalore. 
                   </p>
                   </p>
                 </div>
@@ -157,7 +158,7 @@
                     <i class="icon-envelope"></i>
                     <div class="item-data">
                       <h3>
-                        <a href="mailto:write@your_mail.here">
+                        <a href="mailto:vineetha.knd92@gmail.com">
                           Add Your mail
                         </a>
                       </h3>
