--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <div class="item-data">
                       <h3>
                         <a href="mailto:vineetha.knd92@gmail.com">
-                          Add Your mail
+                          Mail me
                         </a>
                       </h3>
                       <p>
@@ -170,15 +170,15 @@
                 </div>
                 <div class="g1">
                   <div class="item-box clearfix">
-                    <i class="icon-facebook"></i>
+                    <i class="icon-linkedIn"></i>
                     <div class="item-data">
                       <h3>
-                        <a href="http://fb.me/your-Username">
-                          Add Facebook Link
+                        <a href="https://www.linkedin.com/in/vineetha-kondameedi-0a871273/">
+                          LinkedIn Profile
                         </a>
                       </h3>
                       <p>
-                        Facebook Profile
+                        Connect with me on LinkedIn
                       </p>
                     </div>
                   </div>
@@ -188,8 +188,8 @@
                     <i class="icon-twitter"></i>
                     <div class="item-data">
                       <h3>
-                        <a href="http://twitter.com/your-Username">
-                          Add Twiter username
+                        <a href="https://twitter.com/Vineetha09867">
+                          Follow me on Twitter
                         </a>
                       </h3>
                       <p>
