--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
                     <div class="item-data">
                       <h3>
                         <a href="https://www.linkedin.com/in/vineetha-kondameedi-0a871273/">
-                          LinkedIn Profile
+                          Connect with me on LinkedIn
                         </a>
                       </h3>
                       <p>
-                        Connect with me on LinkedIn
+                        LinkedIn Profile
                       </p>
                     </div>
                   </div>
@@ -293,10 +293,10 @@
                 <h3>
                   Hobbies
                 </h3>
-                <span class="label label-info">Hobby 1</span>
-                <span class="label label-info">Hobby 2</span>
-                <span class="label label-info">Hobby 3</span>
-                <span class="label label-info">Hobby 4</span>
+                <span class="label label-info">Exploring SOTA on autonomous driving</span>
+                <span class="label label-info">travelling</span>
+                <span class="label label-info">Cooking</span>
+                <span class="label label-info">Listening to music</span>
               </div>
             </section>
           </div>
@@ -311,37 +311,37 @@
                   <div class="project-img-container" onclick="document.getElementById('modal-wrapper').style.display='block'">
                     <img src="./images/floor.jpg" alt="project image">
                   </div>
-                  <p class="project-title">Project Title</p>
+                  <p class="project-title">F.A.I.R - Frugal ADAS for Indian Roads</p>
                 </div>
                 <div class="project-container">
                   <div class="project-img-container" onclick="document.getElementById('modal-wrapper').style.display='block'">
                     <img src="./images/floor.jpg" alt="project image">
                   </div>
-                  <p class="project-title">Project Title</p>
+                  <p class="project-title">Dynamic LIDAR reconstruction</p>
                 </div>
                 <div class="project-container">
                   <div class="project-img-container" onclick="document.getElementById('modal-wrapper').style.display='block'">
                     <img src="./images/floor.jpg" alt="project image">
                   </div>
-                  <p class="project-title">Project Title</p>
+                  <p class="project-title">AE-GAN and VAE-GAN</p>
                 </div>
                 <div class="project-container">
                   <div class="project-img-container" onclick="document.getElementById('modal-wrapper').style.display='block'">
                     <img src="./images/floor.jpg" alt="project image">
                   </div>
-                  <p class="project-title">Project Title</p>
+                  <p class="project-title">Model Explainability</p>
                 </div>
                 <div class="project-container">
                   <div class="project-img-container" onclick="document.getElementById('modal-wrapper').style.display='block'">
                     <img src="./images/floor.jpg" alt="project image">
                   </div>
-                  <p class="project-title">Project Title</p>
+                  <p class="project-title">Generative models and Disentanglement</p>
                 </div>
                 <div class="project-container">
                   <div class="project-img-container" onclick="document.getElementById('modal-wrapper').style.display='block'">
                     <img src="./images/floor.jpg" alt="project image">
                   </div>
-                  <p class="project-title">Project Title</p>
+                  <p class="project-title">Establishing Semantic Relationships among object classes</p>
                 </div>
                 <div class="project-container">
                   <div class="project-img-container"onclick="document.getElementById('modal-wrapper').style.display='block'">
@@ -353,13 +353,13 @@
                   <div class="project-img-container" onclick="document.getElementById('modal-wrapper').style.display='block'">
                     <img src="./images/floor.jpg" alt="project image">
                   </div>
-                  <p class="project-title">Project Title</p>
+                  <p class="project-title">Customer credit card transaction prediction</p>
                 </div>
                 <div class="project-container">
                   <div class="project-img-container" onclick="document.getElementById('modal-wrapper').style.display='block'">
                     <img src="./images/floor.jpg" alt="project image">
                   </div>
-                  <p class="project-title">Project Title</p>
+                  <p class="project-title">Jigsaw-unintended-bias-in-toxicity-classification</p>
                 </div>
               </div>
               <div id="modal-wrapper" class="modal">
@@ -415,7 +415,7 @@
                       E-mail
                     </h4>
                     <p>
-                      Add your mail 1<br />Add your mail 2
+                      vineetha.knd92@gmail.com<br />vineetha.iisc@gmail.com
                     </p>
                   </div>
                 </div>
@@ -430,7 +430,8 @@
                       About Me
                     </h4>
                     <p>
-                      Write something about you
+                      I am incredibly passionate about deep learning and computer vision and always seek for an opportunity where 
+                      I can improve my skills and learn something new towards my passion
                     </p>
                   </div>
                 </div>
