--- a/index.html
+++ b/index.html
@@ -530,8 +530,8 @@
                   </div>
 
                   <div class="container">
-                    <input type="text" placeholder="" name="uname" readonly>
-                    <textarea class="project_description" rows="3" placeholder="My first NLP project. The aim was to identify bias in online comments for sentiment analysis. Used pre trained word embeddings from crawl and fasttext. Trained Bi-directional LSTM withsample weights to account for the bias" readonly></textarea>
+                    <input type="text" placeholder="Detect toxic comments and minimize unintended model bias" name="uname" readonly>
+                    <textarea class="project_description" rows="3" placeholder="My first NLP project. The aim was to identify toxic online comments by reducing the bias to identities in toxic comments. Used pre-trained word embeddings from crawl and fasttext. Trained Bi-directional LSTM withsample weights to account for the bias" readonly></textarea>
                     <input type="url" placeholder="https://github.com/vineethak/jigsaw-unintended-bias-toxicity-classification"readonly>
                     <input type="text" placeholder="Python, Pandas, Keras" readonly>
                     <button class="project_submit" type="submit">Submit</button>
@@ -579,7 +579,7 @@
                       Address
                     </h4>
                     <p>
-                      Type here
+                      3rd Floor, SID Building, RBCCPS, Bengaluru
                     </p>
                   </div>
                 </div>
