--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
       <header id="header">
         <div id="logo">
           <h6>
-            Your Name
+            Vineetha Kondamedo
           </h6>
           <h4>
-            Tag1 / Tag2
+            Deep Learning / Computer Vision
           </h4>
         </div>
       </header>
