--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <header id="header">
         <div id="logo">
           <h6>
-            Vineetha Kondamedo
+            Vineetha Kondameedi
           </h6>
           <h4>
             Deep Learning / Computer Vision
